--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 <hr align=center width =2000 color=#8FBAC8 size=3>
 <hr align=center width =2000 color=#8FBAC8 size=10>
 <hr align=center width =2000 color=#8FBAC8 size=3><p>
-<div align=right><b><i> Tinklapio autorė yra Mykolo Biržiškos gimnazijos mokinė Brigita Kasperavičiūtė </b></i></div><p>
-<div align=right><b><i> © Brigita Kasperavičiūtė 2020</b></i> </div><p>
+<div align=right><b><i> Tinklapio autorė yra Brigita</b></i></div><p>
+<div align=right><b><i> © Brigita 2020</b></i> </div><p>
 <hr align=center width =2000 color=#8FBAC8 size=3>
 <hr align=center width =2000 color=#8FBAC8 size=10>
 <hr align=center width =2000 color=#8FBAC8 size=3>
